Refs #7114: Hide secondary content for inactive slides.  This solves the problem of overlapping text but still allows us to use the hideNonActive option in the jQuery Cycle library (refs #6954).

--- a/styles/default/css/ombuslide.default.less
+++ b/styles/default/css/ombuslide.default.less
@@ -1,3 +1,5 @@
+@import '../../../ombuslide.mixins.less';
+
 .entity.bean-ombuslide {
   position: relative;
 }
@@ -55,12 +57,25 @@
       &.first {
         display: block;
       }
+
+      &.cycle-slide-active {
+        .group_secondary {
+          > * {
+            .opacity(1);
+          }
+        }
+      }
     }
 
     .group_secondary {
       width: 100%;
       color: white;
       padding: 1.0em;
+
+      > * {
+        .opacity(0);
+        .transition(all 0.5s ease);
+      }
     }
   }
 
